--- a/src/assets/css/_messages.scss
+++ b/src/assets/css/_messages.scss
@@ -97,4 +97,11 @@
     left: 60px;
     margin-top: 62px;
   }
+  .btn-send {
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
+    padding: 0.375rem 1.6rem;
+    &:hover {
+      background-color: whitesmoke;
+    }
+  }
 }
