--- a/src/assets/css/_account.scss
+++ b/src/assets/css/_account.scss
@@ -4,16 +4,16 @@
     padding-right: 55px;
     .list-group {
       .list-group-item {
+        padding: 1rem 1.25rem;
         position: relative;
       }
       .list-group-item.with_c_prog {
-        padding-top: 0.4rem;
-        padding-bottom: 0.4rem;
+        padding-top: 0.63rem;
+        padding-bottom: 0.63rem;
         position: relative;
         .text {
           margin-top: 0.45rem;
         }
-        $CircularProgressbarColor: #4865d5;
         .CircularProgressbar {
           position: relative;
           left: 70px;
@@ -39,9 +39,6 @@
   .text_with_icon {
     padding-left: 36px;
     vertical-align: middle;
-    img {
-      width: 16px;
-    }
     .text {
       padding-left: 15px;
       position: relative;
