--- a/src/assets/scss/_analytics.scss
+++ b/src/assets/scss/_analytics.scss
@@ -52,6 +52,7 @@
         }
         .info {
           margin-right: 50px;
+          overflow: hidden;
           div {
             position: relative;
             .symbol {
