--- a/src/assets/scss/_post.scss
+++ b/src/assets/scss/_post.scss
@@ -1,6 +1,9 @@
 .it-post {
   padding-top: 90px;
   position: relative;
+  input {
+    font-size: 14px;
+  }
   .back {
     position: absolute;
     width: 38px;
