--- a/src/assets/scss/_modal.scss
+++ b/src/assets/scss/_modal.scss
@@ -7,7 +7,7 @@
     border-radius: 50%;
     width: 38px;
     height: 38px;
-    background-color: #eceff4;
+    background-color: transparent;
     text-align: center;
     svg {
       position: relative;
@@ -55,6 +55,9 @@
         margin-bottom: 0;
       }
     }
+  }
+  .social {
+    margin-top: 30px;
   }
 }
 .it-modal-sing-wrap {
