--- a/src/assets/scss/_trading.scss
+++ b/src/assets/scss/_trading.scss
@@ -25,6 +25,9 @@
                 font-weight: 500;
                 font-size: 14px;
                 text-align: left;
+                @media (max-width: 1439px) {
+                  padding-left: 5px;
+                }
               }
             }
           }
@@ -63,6 +66,10 @@
     margin-top: 12px;
   }
   .button-cards {
+    margin-top: 24px;
+    @media all and (max-width: 1439px){
+      margin-top: 10px;
+    }
     > .col {
       &:first-child {
         padding-right: 10px;
@@ -187,7 +194,41 @@
           input {
             font-size: 14px;
             text-align: right;
+            color: white;
           }
+        }
+      }
+      .it-hr-text {
+        margin-top: 1px;
+        line-height: 1em;
+        position: relative;
+        outline: 0;
+        border: 0;
+        color: black;
+        text-align: center;
+        height: 1.5em;
+        opacity: .5;
+        font-weight: 600;
+        &:before {
+          content: '';
+          background: #818078;
+          position: absolute;
+          left: 0;
+          top: 50%;
+          width: 100%;
+          height: 0.05em;
+        }
+        &:after {
+          content: attr(data-content);
+          position: relative;
+          display: inline-block;
+          font-size: 9px;
+          padding: 0 .5em;
+          line-height: 2.2em;
+          color: #818078;
+          background-color: #fcfcfa;
+          letter-spacing: 1.3px;
+          font-weight: bold;
         }
       }
     }
