--- a/src/assets/scss/itrade.scss
+++ b/src/assets/scss/itrade.scss
@@ -449,3 +449,37 @@ select, .it-pointer, svg {
     top: 1px
   }
 }
+.tooltip {
+  &.show {
+    opacity: 1;
+  }
+  .tooltip-inner {
+    background-color: white;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
+    position: relative;
+    .tooltip-content {
+      padding: 10px 12px 0 12px;
+    }
+    border: 1px solid #c2c2c2;
+  }
+
+  span.arrow {
+    &::before {
+      border-top-color: white;
+    }
+    display: none;
+  }
+  div.my-arrow {
+    width: 10px;
+    height: 10px;
+    background-color: white;
+    box-shadow: 1px 2px 1px 0 rgba(0, 0, 0, 0.1);
+    transform:rotate(45deg);
+    margin: 0 auto;
+    position: relative;
+    top: 10px;
+    left: 5px;
+    border-bottom: 1px solid #c2c2c2;
+    border-right: 1px solid #c2c2c2;
+  }
+}
